--- a/Chart/app/build.gradle
+++ b/Chart/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.example.alfabet.chart"
+        applicationId "com.solasoli.chat.chart"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -20,7 +20,6 @@ android {
 }
 
 dependencies {
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
